WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288253
Fix WKDownload.originatingFrame of downloads originated without a frame
https://bugs.webkit.org/show_bug.cgi?id=288253
Summary
Fix WKDownload.originatingFrame of downloads originated without a frame
Alex Christensen
Reported
2025-02-21 15:52:43 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-21 15:52:53 PST
<
rdar://problem/145328556
>
Alex Christensen
Comment 2
2025-02-21 15:55:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41107
EWS
Comment 3
2025-02-21 22:41:38 PST
Committed
290860@main
(6dd55289e636): <
https://commits.webkit.org/290860@main
> Reviewed commits have been landed. Closing PR #41107 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug